[bug] fix image size on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,8 @@ h2 {
 	border: 4px double #ededed;
 	margin: 0 0 5px 0;
 	padding: 5px;
+	width: 25%;
+	float: left;
 }
 
 #control_board {
